--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Font Awesome 6 -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"> -->
         <!-- Bootstrap 5 -->
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
         <!-- Debug -->
         <!-- <link rel="stylesheet" href="css/debug.css"> -->
         <!-- Style -->
@@ -22,10 +22,16 @@
         
     </head>
     <body>
+
+        <div class="container">
+            <div class="bg-light rounded-3 p-3 mt-5">
+                <p id="ticket-price"></p>
+            </div>
+        </div>
         
 
         <!-- Bootstrap 5 -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Script -->
         <script src="js/script.js"></script>
     </body>
