added html data containers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="it">
     <head>
         <!-- * SETTINGS * -->
         <meta charset="UTF-8">
@@ -19,11 +19,33 @@
         <title>Calcolo biglietto del treno</title>
         
     </head>
-    <body>
+    <body class="bg-light">
 
         <div class="container">
-            <div class="bg-light rounded-3 p-3 mt-5">
-                <p id="ticket-price"></p>
+            <div class="bg-white rounded-3 p-3 mt-5">
+
+                <h2 class="mb-4">Prezzo del Biglietto</h2>
+
+                <div class="row">
+
+                    <div class="col-12 mb-3">
+                        <strong>Lunghezza Viaggio: </strong><span id="trip-length">TEST</span>
+                    </div>
+
+                    <div class="col-12 mb-3">
+                        <strong>Età Passeggero: </strong><span id="passenger-age">TEST</span>
+                    </div>
+
+                    <div class="col-12 mb-3">
+                        <strong>Sconto Applicato: </strong><span id="passenger-age">TEST</span>
+                    </div>
+
+                    <div class="col-12 mb-3">
+                        <strong>Prezzo Finale: </strong><span id="ticket-price">TEST</span>
+                    </div>
+
+                </div>
+
             </div>
         </div>
         
