updated DOM elemets with ticket info

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                 <div class="row">
 
                     <div class="col-12 mb-3">
-                        <strong>Lunghezza Viaggio: </strong><span id="trip-length">TEST</span>
+                        <strong>Lunghezza Viaggio: </strong><span id="trip-length"></span>
                     </div>
 
                     <div class="col-12 mb-3">
-                        <strong>Età Passeggero: </strong><span id="passenger-age">TEST</span>
+                        <strong>Età Passeggero: </strong><span id="passenger-age"></span>
                     </div>
 
                     <div class="col-12 mb-3">
-                        <strong>Sconto Applicato: </strong><span id="passenger-age">TEST</span>
+                        <strong>Sconto Applicato: </strong><span id="discount"></span>
                     </div>
 
                     <div class="col-12 mb-3">
-                        <strong>Prezzo Finale: </strong><span id="ticket-price">TEST</span>
+                        <strong class="h5 text-success">Prezzo Finale: <span id="ticket-price"></span></strong>
                     </div>
 
                 </div>
