added more data elements and fixed id names

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
                     </div>
 
                     <div class="col-12 mb-3">
+                        <strong>Prezzo Biglietto Standard: </strong><span id="ticket-base-price"></span>
+                    </div>
+
+                    <div class="col-12 mb-3">
                         <strong>Sconto Applicato: </strong><span id="discount"></span>
                     </div>
 
                     <div class="col-12 mb-3">
-                        <strong class="h5 text-success">Prezzo Finale: <span id="ticket-price"></span></strong>
+                        <strong class="h5 text-success">Prezzo Finale: <span id="ticket-final-price"></span></strong>
                     </div>
 
                 </div>
