changed HTML structure

--- a/index.html
+++ b/index.html
@@ -22,10 +22,47 @@
     <body class="bg-light">
 
         <div class="container">
+
+            <!-- Rounded Container -->
             <div class="bg-white rounded-3 p-3 mt-5">
 
+                <!-- Title -->
                 <h2 class="mb-4">Prezzo del Biglietto</h2>
 
+                <!-- Checkout Container -->
+                <ul>
+                    <!-- Data section -->
+                    <li>
+                        <!-- Section Title -->
+                        <h4>Dati Inseriti:</h4>
+
+                        <!-- Fields List -->
+                        <ul>
+                            <li>
+                                <span>Lunghezza Tragitto</span>
+                                <strong>9999 KM</strong>
+                            </li>
+                            <li>
+                                <span>Età Passeggero</span>
+                                <strong>999 Anni</strong>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <!-- Cost section -->
+                    <li>
+
+                    </li>
+
+                    <!-- Totla -->
+                    <li>
+
+                    </li>
+
+                </ul>
+
+
+                <!--
                 <div class="row">
 
                     <div class="col-12 mb-3">
@@ -49,6 +86,7 @@
                     </div>
 
                 </div>
+                -->
 
             </div>
         </div>
