changed all html data

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="bg-white rounded-3 p-3 mt-5">
 
                 <!-- Title -->
-                <h2 class="mb-4">Prezzo del Biglietto</h2>
+                <h2 class="mb-4">Riepilogo Costo</h2>
 
                 <!-- Checkout Container -->
                 <ul>
@@ -51,12 +51,34 @@
 
                     <!-- Cost section -->
                     <li>
+                        <!-- Section Title -->
+                        <h4>Costo:</h4>
 
+                        <!-- Fields List -->
+                        <ul>
+                            <li>
+                                <span>Prezzo Base</span>
+                                <span>€0.21 per KM</span>
+                            </li>
+                            <li>
+                                <span>Costo Biglietto</span>
+                                <span>€9999.99</span>
+                            </li>
+                            <li>
+                                <span>Sconto Minorenni</span>
+                                <span>-20%</span>
+                            </li>
+                            <li>
+                                <span>Sconto Over 65</span>
+                                <span>-</span>
+                            </li>
+                        </ul>
                     </li>
 
-                    <!-- Totla -->
+                    <!-- Totale -->
                     <li>
-
+                        <span>Totale</span>
+                        <strong>€9999.99</strong>
                     </li>
 
                 </ul>
