added style classes

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
                 <!-- Checkout Container -->
                 <ul>
                     <!-- Data section -->
-                    <li>
+                    <li class="border-top py-3">
                         <!-- Section Title -->
                         <h4>Dati Inseriti:</h4>
 
                         <!-- Fields List -->
                         <ul>
-                            <li>
+                            <li class="d-flex justify-content-between py-1">
                                 <span>Lunghezza Tragitto</span>
                                 <strong>9999 KM</strong>
                             </li>
-                            <li>
+                            <li class="d-flex justify-content-between py-1">
                                 <span>Età Passeggero</span>
                                 <strong>999 Anni</strong>
                             </li>
@@ -50,25 +50,25 @@
                     </li>
 
                     <!-- Cost section -->
-                    <li>
+                    <li class="border-top py-3">
                         <!-- Section Title -->
                         <h4>Costo:</h4>
 
                         <!-- Fields List -->
                         <ul>
-                            <li>
+                            <li class="d-flex justify-content-between py-1">
                                 <span>Prezzo Base</span>
                                 <span>€0.21 per KM</span>
                             </li>
-                            <li>
+                            <li class="d-flex justify-content-between py-1">
                                 <span>Costo Biglietto</span>
                                 <span>€9999.99</span>
                             </li>
-                            <li>
+                            <li class="d-flex justify-content-between py-1">
                                 <span>Sconto Minorenni</span>
                                 <span>-20%</span>
                             </li>
-                            <li>
+                            <li class="d-flex justify-content-between py-1">
                                 <span>Sconto Over 65</span>
                                 <span>-</span>
                             </li>
@@ -76,9 +76,9 @@
                     </li>
 
                     <!-- Totale -->
-                    <li>
-                        <span>Totale</span>
-                        <strong>€9999.99</strong>
+                    <li class="border-top d-flex justify-content-between py-3">
+                        <strong>Totale</strong>
+                        <strong class="text-success fs-4">€9999.99</strong>
                     </li>
 
                 </ul>
