--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                         <ul>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Lunghezza Tragitto</span>
-                                <strong><span id="trip-length"></span> KM</strong>
+                                <strong id="trip-length"></strong>
                             </li>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Età Passeggero</span>
-                                <strong><span id="passenger-age"></span> Anni</strong>
+                                <strong id="passenger-age"></strong>
                             </li>
                         </ul>
                     </li>
@@ -62,7 +62,7 @@
                             </li>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Costo Biglietto</span>
-                                <span>€<span id="ticket-base-price"></span></span>
+                                <span id="ticket-base-price"></span>
                             </li>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Sconto Minorenni</span>
@@ -78,7 +78,7 @@
                     <!-- Totale -->
                     <li class="border-top d-flex justify-content-between py-3">
                         <strong>Totale</strong>
-                        <strong class="text-success fs-4">€<span id="ticket-final-price"></span></strong>
+                        <strong id="ticket-final-price" class="text-success fs-4"></strong>
                     </li>
 
                 </ul>
