added discount message on page

--- a/index.html
+++ b/index.html
@@ -65,12 +65,8 @@
                                 <span id="ticket-base-price"></span>
                             </li>
                             <li class="d-flex justify-content-between py-1">
-                                <span>Sconto Minorenni</span>
-                                <span id="underage-discount">-</span>
-                            </li>
-                            <li class="d-flex justify-content-between py-1">
-                                <span>Sconto Over 65</span>
-                                <span id="overage-discount">-</span>
+                                <span>Sconto:</span>
+                                <span id="discount">-</span>
                             </li>
                         </ul>
                     </li>
