added dinamic km price

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                         <ul>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Lunghezza Tragitto</span>
-                                <strong id="trip-length"></strong>
+                                <strong id="trip-length">-</strong>
                             </li>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Età Passeggero</span>
-                                <strong id="passenger-age"></strong>
+                                <strong id="passenger-age">-</strong>
                             </li>
                         </ul>
                     </li>
@@ -58,11 +58,11 @@
                         <ul>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Prezzo Base</span>
-                                <span>€0.21 per KM</span>
+                                <span id="ticket-km-price">-</span>
                             </li>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Costo Biglietto</span>
-                                <span id="ticket-base-price"></span>
+                                <span id="ticket-base-price">-</span>
                             </li>
                             <li class="d-flex justify-content-between py-1">
                                 <span>Sconto:</span>
@@ -74,7 +74,7 @@
                     <!-- Totale -->
                     <li class="border-top d-flex justify-content-between py-3">
                         <strong>Totale</strong>
-                        <strong id="ticket-final-price" class="text-success fs-4"></strong>
+                        <strong id="ticket-final-price" class="text-success fs-4">-</strong>
                     </li>
 
                 </ul>
