added background image

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <title>Calcolo biglietto del treno</title>
         
     </head>
-    <body class="bg-light">
+    <body>
 
         <div class="container">
 
-            <!-- Rounded Container -->
-            <div class="bg-white rounded-3 p-3 mt-5">
+            <!-- Wrapper -->
+            <div class="wrapper p-3 mt-5">
 
                 <!-- Title -->
                 <h2 class="mb-4">Riepilogo Costo</h2>
@@ -78,33 +78,6 @@
                     </li>
 
                 </ul>
-
-
-                <!--
-                <div class="row">
-
-                    <div class="col-12 mb-3">
-                        <strong>Lunghezza Viaggio: </strong><span id="trip-length"></span>
-                    </div>
-
-                    <div class="col-12 mb-3">
-                        <strong>Età Passeggero: </strong><span id="passenger-age"></span>
-                    </div>
-
-                    <div class="col-12 mb-3">
-                        <strong>Prezzo Biglietto Standard: </strong><span id="ticket-base-price"></span>
-                    </div>
-
-                    <div class="col-12 mb-3">
-                        <strong>Sconto Applicato: </strong><span id="discount"></span>
-                    </div>
-
-                    <div class="col-12 mb-3">
-                        <strong class="h5 text-success">Prezzo Finale: <span id="ticket-final-price"></span></strong>
-                    </div>
-
-                </div>
-                -->
 
             </div>
         </div>
