fixed left column style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="wrapper row p-3 mt-5">
 
                 <!-- Left Column -->
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 bg-white rounded shadow">
 
                     <!-- Title -->
                     <h2 class="mb-4">Riepilogo Costo</h2>
