fixed layout spacing and shadow

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="container">
 
             <!-- Wrapper -->
-            <div class="wrapper row p-3 mt-5">
+            <div class="wrapper row p-3 my-4">
 
                 <!-- Left Column -->
-                <div class="col-12 col-lg-6 bg-white rounded shadow">
+                <div class="col-12 col-lg-6 bg-white rounded shadow-sm">
 
                     <!-- Title -->
-                    <h2 class="mb-4">Riepilogo Costo</h2>
+                    <h2 class="my-4">Riepilogo Costo</h2>
 
                     <!-- Checkout Container -->
                     <ul>
