changed "total" field style

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                         <!-- Totale -->
                         <li class="border-top d-flex justify-content-between py-3">
-                            <strong>Totale</strong>
+                            <span class="h4">Totale:</span>
                             <strong id="ticket-final-price" class="text-success fs-4">-</strong>
                         </li>
 
